A few more blog posts & titles

--- a/content/news-2008-09-01.md
+++ b/content/news-2008-09-01.md
@@ -1,11 +1,11 @@
-Title: News from September 01, 2008
+Title: Allen Mincer appointed Collegiate Professor
 date: 2008-09-01
 Authors: Kyle Cranmer
 Category: Blog
-Tags: news
+Tags: news, honors
 Slug: News-from-09-01-2008
-Summary:  Allen Mincer is appointed as a Collegiate Professor at NYU until August 2011.
+Summary:  Allen Mincer is appointed as a Collegiate Professor at NYU.
  
 
- Allen Mincer is appointed as a Collegiate Professor at NYU until August 2011.
+ Allen Mincer is appointed as a Collegiate Professor at NYU.
  
