--- a/content/news-2008-09-29.md
+++ b/content/news-2008-09-29.md
@@ -1,4 +1,4 @@
-Title: News from September 29, 2008
+Title: We're featured on front page of NYU Today
 date: 2008-09-29
 Authors: Kyle Cranmer
 Category: Blog
