--- a/content/news-2008-12-22.md
+++ b/content/news-2008-12-22.md
@@ -1,4 +1,4 @@
-Title: News from December 22, 2008
+Title: Milagro result in top 10 news stories of 2008
 date: 2008-12-22
 Authors: Kyle Cranmer
 Category: Blog
