--- a/content/news-2009-01-16.md
+++ b/content/news-2009-01-16.md
@@ -1,4 +1,4 @@
-Title: News from January 16, 2009
+Title: NYU hosting 2009 ATLAS Physics Workshop of the Americas
 date: 2009-01-16
 Authors: Kyle Cranmer
 Category: Blog
