--- a/content/news-2010-02-01.md
+++ b/content/news-2010-02-01.md
@@ -1,4 +1,4 @@
-Title: News from February 01, 2010
+Title: Akira Shibata takes his next step
 date: 2010-02-01
 Authors: Kyle Cranmer
 Category: Blog
