--- a/content/news-2011-11-04.md
+++ b/content/news-2011-11-04.md
@@ -1,4 +1,4 @@
-Title: News from November 04, 2011
+Title: New result in search for dark photons
 date: 2011-11-04
 Authors: Kyle Cranmer
 Category: Blog
