--- a/content/news-2012-07-11.md
+++ b/content/news-2012-07-11.md
@@ -1,4 +1,4 @@
-Title: News from July 11, 2012
+Title: Cranmer joins Neil deGrasse Tyson & Bill Nye 
 date: 2012-07-11
 Authors: Kyle Cranmer
 Category: Blog
