--- a/content/news-2013-10-03.md
+++ b/content/news-2013-10-03.md
@@ -1,4 +1,4 @@
-Title: News from October 03, 2013
+Title: Beacham talks dark photons, open science
 date: 2013-10-03
 Authors: Kyle Cranmer
 Category: Blog
