--- a/content/news-2010-03-01.md
+++ b/content/news-2010-03-01.md
@@ -1,4 +1,4 @@
-Title: News from March 01, 2010
+Title: NYU receives NSF funding for computing
 date: 2010-03-01
 Authors: Kyle Cranmer
 Category: Blog
