--- a/content/news-2014-12-04.md
+++ b/content/news-2014-12-04.md
@@ -8,6 +8,15 @@ Summary: Andy Haas from NYU and Alan Baar from the University of Oxford have rel
 
 
 Andy Haas from NYU and Alan Baar from the University of Oxford have released [higgshunters.org](http://www.higgshunters.org/), the first particle physics venture on [Zooniverse](https://www.zooniverse.org), and featuring real events from ATLAS.  
+
+Social: 
+
+ * [twitter](https://twitter.com/higgshunters)
+ * [facebook](https://www.facebook.com/pages/Higgs-Hunters/1436737436604742)
+
+<a class="twitter-timeline" href="https://twitter.com/higgshunters" data-widget-id="544562606384484352">Tweets by @higgshunters</a>
+<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
+
  
 
  
