--- a/content/news-2008-12-22.md
+++ b/content/news-2008-12-22.md
@@ -4,10 +4,11 @@ Authors: Kyle Cranmer
 Category: Blog
 Tags: news, results
 Slug: News-from-12-22-2008
-Summary:  Our MILAGRO publication in Phys.Rev.Lett. was included in the APS/AIP top 10 physics news stories of 2008.  [<a href="http//www.aip.org/pnu/2008/split/879-1.html">article</a>]
+Summary:  Our MILAGRO publication in Phys.Rev.Lett. was included in the [APS/AIP top 10 physics news stories of 2008](http://www.aps.org/publications/apsnews/200902/physicsstories.cfm)
 
  
 
- Our MILAGRO publication in Phys.Rev.Lett. was included in the APS/AIP top 10 physics news stories of 2008.  [<a href="http//www.aip.org/pnu/2008/split/879-1.html">article</a>]
+ Our MILAGRO publication in Phys.Rev.Lett. was included in the [APS/AIP top 10 physics news stories of 2008](http://www.aps.org/publications/apsnews/200902/physicsstories.cfm)
 
+[The article](http://arxiv.org/abs/0801.3827)
  
