--- a/content/news-2012-07-04.md
+++ b/content/news-2012-07-04.md
@@ -7,7 +7,17 @@ Slug: News-from-07-04-2012
 Summary:  The NYU ATLAS group hosts a 3 AM viewing party of the joint ATLAS+CMS Higgs seminar, attended by several dozen members of the NYU physics community.  CMS went first, and so when they presented their ~5$\sigma$ result, we popped the champagne corks.
 
  
-
  The NYU ATLAS group hosts a 3 AM viewing party of the joint ATLAS+CMS Higgs seminar, attended by several dozen members of the NYU physics community.  CMS went first, and so when they presented their ~5$\sigma$ result, we popped the champagne corks.
 
- 
+  <h2>Observation of a new Higgs-like particle at a mass of ~126 GeV</h2>
+<a href="http://www.atlas.ch/news/2012/latest-results-from-higgs-search.html"><img style="width:300px;" src="images/HiggsComb_P0_2012July.png"/></a>
+<p>
+On July 4, 2012, CERN held a <a href="http://press-archived.web.cern.ch/press-archived/PressReleases/Releases2012/PR17.12E.html">joint ATLAS+CMS seminar</a> where each experiment presented results indicating the observation of a new particle consistent with the Standard Model Higgs boson with a measured mass of ~125-127 GeV.  
+The excess of Higgs-like events was observed in several possible decay channels, each of which required a separate analysis, and the NYU ATLAS group was (and is) heavily involved in two of these analyses: Higgs-to-four-leptons and Higgs-to-two-photons.  
+Additionally, all of the separate analyses needed to be combined for <a href="http://www.sciencedirect.com/science/article/pii/S037026931200857X">the final ATLAS result, published in Physics Letters B</a>.  
+In the ATLAS Collaboration, this Higgs combination task fell to a small group of experts, one of whom was our own Kyle Cranmer, Editor of the combination paper.
+</p>
+<p>
+This is a major milestone not just in particle physics but in the history of science, and the NYU group is proud to have played a part in the discovery.  
+The observation of a new boson is just the first step, however.  Further analyses are underway to examine the properties of this particle to determine whether it is indeed the Standard Model Higgs or something different (and there are intriguing hints that this is the case).
+
