--- a/content/news-2014-12-14.md
+++ b/content/news-2014-12-14.md
@@ -1,4 +1,4 @@
-Title: Machine Learning for High Energy Physics
+Title: Machine Learning for HEP
 date: 2014-12-14
 Authors: Kyle Cranmer
 Category: Blog
@@ -10,4 +10,4 @@ Summary: Cranmer presents new directions for Machine Learning and High-Energy Ph
 Following up on the successful "HiggsML" Kaggle Challenge, Cranmer presents new directions for Machine Learning and High-Energy Physics at annual NIPS conference in Montreal.
  
 
- 
+[Post from Yann LeCun](https://www.facebook.com/yann.lecun/posts/10152448865922143 )
