--- a/content/news-2007-12-01.md
+++ b/content/news-2007-12-01.md
@@ -2,7 +2,7 @@ Title: Casadei takes over MET Trigger
 date: 2007-12-01
 Authors: Kyle Cranmer
 Category: Blog
-Tags: news
+Tags: news, honors
 Slug: News-from-12-01-2007
 Summary:  Diego Casadei appointed co-coordinator of ATLAS MissingET Trigger slice.
  
