--- a/content/news-2014-12-04.md
+++ b/content/news-2014-12-04.md
@@ -4,10 +4,10 @@ Authors: Kyle Cranmer
 Category: Blog
 Tags: news, outreach
 Slug: News-from-12-04-2014
-Summary: Andy Haas from NYU and Alan Baar from the University of Oxford have released [higgshunters.org](http://www.higgshunters.org/), the first particle physics venture on [Zooniverse](https://www.zooniverse.org), and featuring real events from ATLAS.  
+Summary: Andy Haas from NYU and Alan Barr from the University of Oxford have released [higgshunters.org](http://www.higgshunters.org/), the first particle physics venture on [Zooniverse](https://www.zooniverse.org), and featuring real events from ATLAS.  
 
 
-Andy Haas from NYU and Alan Baar from the University of Oxford have released [higgshunters.org](http://www.higgshunters.org/), the first particle physics venture on [Zooniverse](https://www.zooniverse.org), and featuring real events from ATLAS.  
+Andy Haas from NYU and Alan Barr from the University of Oxford have released [higgshunters.org](http://www.higgshunters.org/), the first particle physics venture on [Zooniverse](https://www.zooniverse.org), and featuring real events from ATLAS.  
 
 <iframe src="//player.vimeo.com/video/102828578" width="500" height="281" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
 Social: 
