updating for carousel

--- a/content/news-2007-02-01.md
+++ b/content/news-2007-02-01.md
@@ -2,7 +2,7 @@ Title: Casadei joins NYU
 date: 2007-02-01
 Authors: Kyle Cranmer
 Category: Blog
-Tags: news, jobs
+Tags: jobs
 Slug: News-from-02-01-2007
 Summary:  Diego Casadei joins ATLAS group.
  
