--- a/content/news-2007-09-01.md
+++ b/content/news-2007-09-01.md
@@ -2,7 +2,7 @@ Title: Cranmer joins NYU
 date: 2007-09-01
 Authors: Kyle Cranmer
 Category: Blog
-Tags: news, jobs
+Tags: jobs
 Slug: News-from-09-01-2007
 Summary:  Kyle Cranmer joins NYU as an Assistant Professor.
  
