--- a/content/news-2007-11-01.md
+++ b/content/news-2007-11-01.md
@@ -2,12 +2,12 @@ Title: Cranmer wins highest honors
 date: 2007-11-01
 Authors: Kyle Cranmer
 Category: Blog
-Tags: news, honors
+Tags: honors, funding
 Slug: News-from-11-01-2007
-Summary:  Kyle Cranmer wins the Presidential Early Career Award for Science and Engineering from the Department of Energy's Office of Sci
-(<a href="http//www.bnl.gov/bnlweb/pubaf/pr/PR_display.asp?prID=07-110">BNL</a> | <a href="http//www.nyu.edu/public.affairs/releases/detail/1828">NYU</a>)
+Summary:  Kyle Cranmer wins the Presidential Early Career Award for Science and Engineering from the Department of Energy's Office of Science (<a href="http://atlas-service-enews.web.cern.ch/atlas-service-enews/2007-8/news_07-8/kyle_cramner.php">ATLAS</a> | <a href="http://www.nyu.edu/about/news-publications/news/2007/11/02/nyu_physicist_wins.html">NYU</a>)
  
 
- Kyle Cranmer wins the Presidential Early Career Award for Science and Engineering from the Department of Energy's Office of Sci
-(<a href="http//www.bnl.gov/bnlweb/pubaf/pr/PR_display.asp?prID=07-110">BNL</a> | <a href="http//www.nyu.edu/public.affairs/releases/detail/1828">NYU</a>)
+ Kyle Cranmer wins the Presidential Early Career Award for Science and Engineering 
+ (<a href="http://en.wikipedia.org/wiki/Presidential_Early_Career_Award_for_Scientists_and_Engineers">PECASE</a>) 
+ from the Department of Energy's Office of Science (<a href="http://atlas-service-enews.web.cern.ch/atlas-service-enews/2007-8/news_07-8/kyle_cramner.php">ATLAS</a> | <a href="http://www.nyu.edu/about/news-publications/news/2007/11/02/nyu_physicist_wins.html">NYU</a>)
  
