--- a/content/news-2008-09-01.md
+++ b/content/news-2008-09-01.md
@@ -2,7 +2,7 @@ Title: Allen Mincer appointed Collegiate Professor
 date: 2008-09-01
 Authors: Kyle Cranmer
 Category: Blog
-Tags: news, honors
+Tags: honors
 Slug: News-from-09-01-2008
 Summary:  Allen Mincer is appointed as a Collegiate Professor at NYU.
  
