--- a/content/news-2008-09-15.md
+++ b/content/news-2008-09-15.md
@@ -2,7 +2,7 @@ Title: Akira in the news
 date: 2008-09-15
 Authors: Kyle Cranmer
 Category: Blog
-Tags: news, outreach
+Tags: outreach
 Slug: News-from-09-15-2008
 Summary:  Akira Shibata's article in ATLAS news published. [<a href="http//atlas-service-enews.web.cern.ch/atlas-service-enews/features/features_tutorial.php">article
  
