--- a/content/news-2008-12-22.md
+++ b/content/news-2008-12-22.md
@@ -2,7 +2,7 @@ Title: Milagro result in top 10 news stories of 2008
 date: 2008-12-22
 Authors: Kyle Cranmer
 Category: Blog
-Tags: news, results
+Tags: results
 Slug: News-from-12-22-2008
 Summary:  Our MILAGRO publication in Phys.Rev.Lett. was included in the [APS/AIP top 10 physics news stories of 2008](http://www.aps.org/publications/apsnews/200902/physicsstories.cfm)
 
