--- a/content/news-2009-08-01.md
+++ b/content/news-2009-08-01.md
@@ -2,7 +2,7 @@ Title: Krasznahorkay joins NYU
 date: 2009-08-01
 Authors: Kyle Cranmer
 Category: Blog
-Tags: news, jobs
+Tags: jobs
 Slug: News-from-08-01-2009
 Summary:  Attila Krasznahorkay joins our group as a post-doctoral research associate.  Attila brings expertise in the muon systems, trigger, and analysis tools.
 
