--- a/content/news-2009-11-13.md
+++ b/content/news-2009-11-13.md
@@ -2,7 +2,7 @@ Title: Attila's on TV
 date: 2009-11-13
 Authors: Kyle Cranmer
 Category: Blog
-Tags: news, outreach
+Tags: outreach
 Slug: News-from-11-13-2009
 Summary:  Attila is interviewed on Hungarian TV. [<a href="http//www.dunatv.hu/musor/videotar?vid=591361">watch interview
  
