--- a/content/news-2010-02-01.md
+++ b/content/news-2010-02-01.md
@@ -2,7 +2,7 @@ Title: Akira Shibata takes his next step
 date: 2010-02-01
 Authors: Kyle Cranmer
 Category: Blog
-Tags: news, jobs
+Tags: jobs
 Slug: News-from-02-01-2010
 Summary:  Akira Shibata leaves our group for Japan, good luck Akira!
 
