--- a/content/news-2010-03-01.md
+++ b/content/news-2010-03-01.md
@@ -2,7 +2,7 @@ Title: NYU receives NSF funding for computing
 date: 2010-03-01
 Authors: Kyle Cranmer
 Category: Blog
-Tags: news, funding
+Tags: funding
 Slug: News-from-03-01-2010
 Summary:  NYU together with the other NSF-funded ATLAS groups receive a Major Research Initiative grant to build the ATLAS Analysis Instrument, a large network of Tier-3 computing facilities.
 
