--- a/content/news-2010-03-30.md
+++ b/content/news-2010-03-30.md
@@ -2,7 +2,7 @@ Title: LHC @ 7 TeV!
 date: 2010-03-30
 Authors: Kyle Cranmer
 Category: Blog
-Tags: news
+Tags: results
 Slug: News-from-03-30-2010
 Summary:  the LHC begins collisions at 7 TeV! [<a href="https//twiki.cern.ch/twiki/bin/view/Atlas/EventDisplayPublicResults">event displays</a>]
 
