--- a/content/news-2010-06-17.md
+++ b/content/news-2010-06-17.md
@@ -2,7 +2,7 @@ Title: New result in search for new force
 date: 2010-06-17
 Authors: Kyle Cranmer
 Category: Blog
-Tags: news, results
+Tags: results
 Slug: News-from-06-17-2010
 Summary:  Kyle joins CDF in a search for the Z' that is highlighted as the Fermilab "result of the week". [<a href="http//www.fnal.gov/pub/today/archive_2010/today10-06-17.html">article</a>] 
 
