--- a/content/news-2010-08-12.md
+++ b/content/news-2010-08-12.md
@@ -2,7 +2,7 @@ Title: Post doc search
 date: 2010-08-12
 Authors: Kyle Cranmer
 Category: Blog
-Tags: news, jobs
+Tags: jobs
 Slug: News-from-08-12-2010
 Summary:  Our group invites applications for an ATLAS research associate. [<a href="postdoc_ad.html">job posting</a>]
 
