--- a/content/news-2010-08-16.md
+++ b/content/news-2010-08-16.md
@@ -2,7 +2,7 @@ Title: Post doc search
 date: 2010-08-16
 Authors: Kyle Cranmer
 Category: Blog
-Tags: news, jobs
+Tags: jobs
 Slug: News-from-08-16-2010
 Summary:  Our group invites applications for a tenure-track faculty position in experimental particle physics. [<a href="http//physics.as.nyu.edu/object/physics.facultypositions">job posting</a>]
 
