--- a/content/news-2010-12-01.md
+++ b/content/news-2010-12-01.md
@@ -2,7 +2,7 @@ Title: Prokofiev joins NYU
 date: 2010-12-01
 Authors: Kyle Cranmer
 Category: Blog
-Tags: news, jobs
+Tags: jobs
 Slug: News-from-12-01-2010
 Summary:  Kirill Prokofiev joins our NYU ATLAS group as a post-doctoral research associate.  Kirill brings expertise in tracking and vertexing. 
 
