--- a/content/news-2011-03-01.md
+++ b/content/news-2011-03-01.md
@@ -2,7 +2,7 @@ Title: Mincer takes over MET trigger
 date: 2011-03-01
 Authors: Kyle Cranmer
 Category: Blog
-Tags: news, honors
+Tags: honors
 Slug: News-from-03-01-2011
 Summary:  Allen Mincer takes over coordination of the Missing ET Trigger in ATLAS. 
 
