--- a/content/news-2011-06-01.md
+++ b/content/news-2011-06-01.md
@@ -2,7 +2,7 @@ Title: Graduation Day
 date: 2011-06-01
 Authors: Kyle Cranmer
 Category: Blog
-Tags: news, graduation
+Tags: graduation
 Slug: News-from-06-01-2011
 Summary:  Grant Christopher and Long Zhao graduate with their Ph.D.s.  Congratulations! 
 
