--- a/content/news-2011-09-06.md
+++ b/content/news-2011-09-06.md
@@ -2,7 +2,7 @@ Title: Andy Haas joins NYU
 date: 2011-09-06
 Authors: Kyle Cranmer
 Category: Blog
-Tags: news, jobs
+Tags: jobs
 Slug: News-from-09-06-2011
 Summary:  Andy Haas joins NYU as an assistant professor and newest member of the experimental particle physics group.
 
