--- a/content/news-2011-09-13.md
+++ b/content/news-2011-09-13.md
@@ -2,7 +2,7 @@ Title: Post doc search
 date: 2011-09-13
 Authors: Kyle Cranmer
 Category: Blog
-Tags: news, jobs
+Tags: jobs
 Slug: News-from-09-13-2011
 Summary:  Our group invites applications for an ATLAS research associate. [<a href="postdoc_ad.html">job posting</a>]
 
