--- a/content/news-2011-10-21.md
+++ b/content/news-2011-10-21.md
@@ -2,7 +2,7 @@ Title: Cranmer joins INSPIRE AB
 date: 2011-10-21
 Authors: Kyle Cranmer
 Category: Blog
-Tags: news
+Tags: honors
 Slug: News-from-10-21-2011
 Summary:  Kyle Cranmer joins the <a href="http//inspirehep.net/">INSPIRE</a> advisory board
 
