--- a/content/news-2011-11-04.md
+++ b/content/news-2011-11-04.md
@@ -2,7 +2,7 @@ Title: New result in search for dark photons
 date: 2011-11-04
 Authors: Kyle Cranmer
 Category: Blog
-Tags: news, results
+Tags: results
 Slug: News-from-11-04-2011
 Summary:  The results of the APEX test run are published in PRL <a href="http//inspirehep.net/record/923960">[paper]</a>
 
