--- a/content/news-2011-11-18.md
+++ b/content/news-2011-11-18.md
@@ -2,7 +2,7 @@ Title: Exciting Higgs Results
 date: 2011-11-18
 Authors: Kyle Cranmer
 Category: Blog
-Tags: news, results
+Tags: results
 Slug: News-from-11-18-2011
 Summary:  The results of the first ATLAS+CMS Higgs combination are shown at the HCP conference in Paris <a href="https//cdsweb.cern.ch/record/1399599?ln=en">[paper]</a>
 
