--- a/content/news-2012-05-01.md
+++ b/content/news-2012-05-01.md
@@ -2,7 +2,7 @@ Title: Ben Kaplan joins NYU
 date: 2012-05-01
 Authors: Kyle Cranmer
 Category: Blog
-Tags: news, jobs
+Tags: jobs
 Slug: News-from-05-01-2012
 Summary:  Benjamin Kaplan joins our group as a post-doctoral research associate, working on ATLAS.
 
