--- a/content/news-2013-02-24.md
+++ b/content/news-2013-02-24.md
@@ -2,7 +2,7 @@ Title: Cranmer gives TEDx talk
 date: 2013-02-24
 Authors: Kyle Cranmer
 Category: Blog
-Tags: news, outreach
+Tags: outreach
 Slug: News-from-02-24-2013
 Summary:  Kyle Cranmer gives a <a href="http//www.youtube.com/watch?v=Pv_DtHuj5Ds">TEDx talk</a> on the discovery of the Higgs boson.
 
