--- a/content/news-2013-10-08.md
+++ b/content/news-2013-10-08.md
@@ -2,7 +2,7 @@ Title: Nobel Prize Celebration
 date: 2013-10-08
 Authors: Kyle Cranmer
 Category: Blog, results
-Tags: news, results, honors
+Tags: results, honors
 Slug: News-from-10-08-2013
 Summary: Nobel Prize Celebration
 
