--- a/content/news-2014-05-06.md
+++ b/content/news-2014-05-06.md
@@ -2,11 +2,14 @@ Title: Sven Kreiss Graduates!
 date: 2014-05-17
 Authors: Kyle Cranmer
 Category: Blog
-Tags: news, Graduation
+Tags: graduation
 Slug: News-from-05-17-2014
-Summary:  Sven Kreiss successfully defends his thesis on "Higgs Boson Discovery and First Property Measurements with the H --> ZZ* --> 4l Channel and the Combination"
+Summary:  Sven Kreiss successfully defends his thesis on "Higgs Boson Discovery and First Property Measurements with the $H \to ZZ^* \to 4 \ell$ Channel and the Combination"
 
-Sven Kreiss successfully defends his thesis on "Higgs Boson Discovery and First Property Measurements with the H --> ZZ* --> 4l Channel and the Combination"
+Sven Kreiss successfully defends his thesis on "Higgs Boson Discovery and First Property Measurements with the $H \to ZZ^* \to 4 \ell$ Channel and the Combination"
 
+<img alt="Sven Kreiss graduates" src="images/sven-graduation.jpg" width="100%" >
+
+(Thanks for the nice bottle of whiskey Sven)
 
  
