--- a/content/news-2014-05-07.md
+++ b/content/news-2014-05-07.md
@@ -2,11 +2,15 @@ Title: James Beacham Graduates!
 date: 2014-05-07
 Authors: Kyle Cranmer
 Category: Blog
-Tags: news, Graduation
+Tags: graduation
 Slug: News-from-05-07-2014
-Summary:  James Beacham successfully defends his thesis on ""Exotic Higgs, Rare Z, and a Dark Photon: Searching for New Physics at the LHC, LEP, and Jefferson Lab""
+Summary:  James Beacham successfully defends his thesis on Exotic Higgs, Rare Z, and a Dark Photon: Searching for New Physics at the LHC, LEP, and Jefferson Lab"
 
-James Beacham successfully defends his thesis on ""Exotic Higgs, Rare Z, and a Dark Photon: Searching for New Physics at the LHC, LEP, and Jefferson Lab""
+James Beacham successfully defends his thesis on "Exotic Higgs, Rare Z, and a Dark Photon: Searching for New Physics at the LHC, LEP, and Jefferson Lab"
+
+<img alt="James Beacham graduates" src="images/james-graduation.jpg" width="100%" >
+
+(Thanks for the Higgs boson beer James!)
 
 
  
