--- a/content/news-2014-08-01.md
+++ b/content/news-2014-08-01.md
@@ -2,7 +2,7 @@ Title: Catrin Bernius joins NYU
 date: 2014-08-01
 Authors: Kyle Cranmer
 Category: Blog
-Tags: news, jobs
+Tags: jobs
 Slug: News-from-08-01-2014
 Summary: Catrin Bernius joins our NYU ATLAS group as a post-doctoral research associate. Catrin brings expertise in the trigger menu.
 
