--- a/content/news-2014-11-12.md
+++ b/content/news-2014-11-12.md
@@ -2,7 +2,7 @@ Title: Cranmer joins HepData AB
 date: 2014-11-12
 Authors: Kyle Cranmer
 Category: Blog
-Tags: news, honors
+Tags: honors
 Slug: News-from-11-12-2014
 Summary:  Cranmer joins HepData Advisory Board
 
