--- a/content/news-2014-12-04.md
+++ b/content/news-2014-12-04.md
@@ -2,7 +2,7 @@ Title: Happy Higgs Hunting
 date: 2014-12-04
 Authors: Kyle Cranmer
 Category: Blog
-Tags: news, outreach
+Tags: outreach
 Slug: News-from-12-04-2014
 Summary: Andy Haas from NYU and Alan Barr from the University of Oxford have released [higgshunters.org](http://www.higgshunters.org/), the first particle physics venture on [Zooniverse](https://www.zooniverse.org), and featuring real events from ATLAS.  
 
