--- a/content/news-2008-05-01.md
+++ b/content/news-2008-05-01.md
@@ -2,7 +2,7 @@ Title: Cranmer leading US-ATLAS Higgs
 date: 2008-05-01
 Authors: Kyle Cranmer
 Category: Blog
-Tags: news, honors
+Tags: honors
 Slug: News-from-05-01-2008
 Summary:  Kyle Cranmer appointed co-convener <a href="http//www.usatlas.bnl.gov/twiki/bin/view/AtlasSoftware/AnalysisSupport.html#Analysis_Forums">US-ATLAS Standard Model and Higgs Analysis Forum</a>
  
