--- a/content/news-2008-09-29.md
+++ b/content/news-2008-09-29.md
@@ -2,7 +2,7 @@ Title: We're featured on front page of NYU Today
 date: 2008-09-29
 Authors: Kyle Cranmer
 Category: Blog
-Tags: news
+Tags: results
 Slug: News-from-09-29-2008
 Summary:  Our group is featured on front page of NYU Today (Vol 22, Issue 2). [<a href="http//www.nyu.edu/nyutoday/article/1523">article
  
