--- a/content/news-2009-01-16.md
+++ b/content/news-2009-01-16.md
@@ -2,7 +2,7 @@ Title: NYU hosting 2009 ATLAS Physics Workshop of the Americas
 date: 2009-01-16
 Authors: Kyle Cranmer
 Category: Blog
-Tags: news
+Tags: honors
 Slug: News-from-01-16-2009
 Summary:  Our group will be hosting the 2009 ATLAS Physics Workshop of the Americas. [<a href="atlasworkshop/">workshop homepage</a>]
  
