--- a/content/news-2013-03-14.md
+++ b/content/news-2013-03-14.md
@@ -2,7 +2,7 @@ Title: Our spin on the Higgs discovery
 date: 2013-03-14
 Authors: Kyle Cranmer
 Category: Blog
-Tags: news, results
+Tags: results
 Slug: News-from-03-14-2013
 Summary:  Our group played a key role in new results from ATLAS that indicate that the new particle has no spin, strongly indicating it is indeed a Higgs boson.  In addition, several measurements of the particle's production and decay properties have been made to test if this is the Higgs boson predicted by the Standard Model.  [<a href="https//twiki.cern.ch/twiki/bin/view/AtlasPublic/HiggsPublicResults">results<a>, <a href="http//press.web.cern.ch/press-releases/2013/03/new-results-indicate-particle-discovered-cern-higgs-boson">press release</a>]
 
