--- a/content/news-2013-05-17.md
+++ b/content/news-2013-05-17.md
@@ -2,12 +2,17 @@ Title: George Lewis Graduates!
 date: 2013-05-17
 Authors: Kyle Cranmer
 Category: Blog
-Tags: news, Graduation
+Tags: graduation
 Slug: News-from-05-17-2013
-Summary:  George Lewis graduates with his Ph.D. based on his thesis entitled "Measurements and Searches for New Physics Using Top Quarks at the LHC"
+Summary:  George Herbert Lewis graduates with his Ph.D. based on his thesis entitled "Measurements and Searches for New Physics Using Top Quarks at the LHC"
 
  
 
- George Lewis graduates with his Ph.D. based on his thesis entitled "Measurements and Searches for New Physics Using Top Quarks at the LHC"
+ George Herbert Lewis graduates with his Ph.D. based on his thesis entitled "Measurements and Searches for New Physics Using Top Quarks at the LHC"
+
+<img alt="George (Herbie) Lewis graduates" src="images/george-graduation.jpg" width="100%" >
+
+(Thanks for the nice bottle of whiskey George)
+
 
  
