--- a/content/news-2013-10-03.md
+++ b/content/news-2013-10-03.md
@@ -2,7 +2,7 @@ Title: Beacham talks dark photons, open science
 date: 2013-10-03
 Authors: Kyle Cranmer
 Category: Blog
-Tags: news, results
+Tags: results
 Slug: News-from-10-03-2013
 Summary:  James Beacham, as part of an invited talk about the APEX Experiment at the <a href="http//menu2013.roma2.infn.it/index.html">MENU 2013 conference</a> in Rome, Italy, makes the first public announcement that the data from the APEX test run are now <a href="http//inspirehep.net/record/923960/hepdata">public</a>, a nice step forward for open science.
 
