--- a/content/news-2014-12-06.md
+++ b/content/news-2014-12-06.md
@@ -2,7 +2,7 @@ Title: Bernius appointed to TDAQ speaker's committee
 date: 2014-12-06
 Authors: Kyle Cranmer
 Category: Blog
-Tags: news, honors
+Tags: honors
 Slug: News-from-12-06-2014
 Summary: Bernius appointed to TDAQ speaker's committee
 
