--- a/content/news-2014-12-14.md
+++ b/content/news-2014-12-14.md
@@ -2,7 +2,7 @@ Title: Machine Learning for HEP
 date: 2014-12-14
 Authors: Kyle Cranmer
 Category: Blog
-Tags: news
+Tags: projects
 Slug: News-from-12-14-2014
 Summary: Cranmer presents new directions for Machine Learning and High-Energy Physics at annual NIPS conference in Montreal.
 
