--- a/content/news-2008-05-01.md
+++ b/content/news-2008-05-01.md
@@ -4,8 +4,8 @@ Authors: Kyle Cranmer
 Category: Blog
 Tags: honors
 Slug: News-from-05-01-2008
-Summary:  Kyle Cranmer appointed co-convener <a href="http//www.usatlas.bnl.gov/twiki/bin/view/AtlasSoftware/AnalysisSupport.html#Analysis_Forums">US-ATLAS Standard Model and Higgs Analysis Forum</a>
+Summary:  Kyle Cranmer appointed co-convener <a href="http://www.usatlas.bnl.gov/twiki/bin/view/AtlasSoftware/AnalysisSupport.html#Analysis_Forums">US-ATLAS Standard Model and Higgs Analysis Forum</a>
  
 
- Kyle Cranmer appointed co-convener <a href="http//www.usatlas.bnl.gov/twiki/bin/view/AtlasSoftware/AnalysisSupport.html#Analysis_Forums">US-ATLAS Standard Model and Higgs Analysis Forum</a>
+ Kyle Cranmer appointed co-convener <a href="http://www.usatlas.bnl.gov/twiki/bin/view/AtlasSoftware/AnalysisSupport.html#Analysis_Forums">US-ATLAS Standard Model and Higgs Analysis Forum</a>
  
