--- a/content/news-2008-09-10.md
+++ b/content/news-2008-09-10.md
@@ -4,8 +4,8 @@ Authors: Kyle Cranmer
 Category: Blog
 Tags: news, results
 Slug: News-from-09-10-2008
-Summary:  the LHC first beam event!  [<a href="http//atlas.web.cern.ch/Atlas/First_Beam.htm">more
+Summary:  the LHC first beam event!  [<a href="http://atlas.web.cern.ch/Atlas/First_Beam.htm">more
  
 
- the LHC first beam event!  [<a href="http//atlas.web.cern.ch/Atlas/First_Beam.htm">more
+ the LHC first beam event!  [<a href="http://atlas.web.cern.ch/Atlas/First_Beam.htm">more
  
