--- a/content/news-2008-09-15.md
+++ b/content/news-2008-09-15.md
@@ -4,8 +4,8 @@ Authors: Kyle Cranmer
 Category: Blog
 Tags: outreach
 Slug: News-from-09-15-2008
-Summary:  Akira Shibata's article in ATLAS news published. [<a href="http//atlas-service-enews.web.cern.ch/atlas-service-enews/features/features_tutorial.php">article
+Summary:  Akira Shibata's article in ATLAS news published. [<a href="http://atlas-service-enews.web.cern.ch/atlas-service-enews/features/features_tutorial.php">article
  
 
- Akira Shibata's article in ATLAS news published. [<a href="http//atlas-service-enews.web.cern.ch/atlas-service-enews/features/features_tutorial.php">article
+ Akira Shibata's article in ATLAS news published. [<a href="http://atlas-service-enews.web.cern.ch/atlas-service-enews/features/features_tutorial.php">article
  
