--- a/content/news-2008-09-29.md
+++ b/content/news-2008-09-29.md
@@ -4,8 +4,8 @@ Authors: Kyle Cranmer
 Category: Blog
 Tags: results
 Slug: News-from-09-29-2008
-Summary:  Our group is featured on front page of NYU Today (Vol 22, Issue 2). [<a href="http//www.nyu.edu/nyutoday/article/1523">article
+Summary:  Our group is featured on front page of NYU Today (Vol 22, Issue 2). [<a href="http://www.nyu.edu/nyutoday/article/1523">article
  
 
- Our group is featured on front page of NYU Today (Vol 22, Issue 2). [<a href="http//www.nyu.edu/nyutoday/article/1523">article
+ Our group is featured on front page of NYU Today (Vol 22, Issue 2). [<a href="http://www.nyu.edu/nyutoday/article/1523">article
  
