--- a/content/news-2009-11-13.md
+++ b/content/news-2009-11-13.md
@@ -4,8 +4,8 @@ Authors: Kyle Cranmer
 Category: Blog
 Tags: outreach
 Slug: News-from-11-13-2009
-Summary:  Attila is interviewed on Hungarian TV. [<a href="http//www.dunatv.hu/musor/videotar?vid=591361">watch interview
+Summary:  Attila is interviewed on Hungarian TV. [<a href="http://www.dunatv.hu/musor/videotar?vid=591361">watch interview
  
 
- Attila is interviewed on Hungarian TV. [<a href="http//www.dunatv.hu/musor/videotar?vid=591361">watch interview
+ Attila is interviewed on Hungarian TV. [<a href="http://www.dunatv.hu/musor/videotar?vid=591361">watch interview
  
