--- a/content/news-2009-11-23.md
+++ b/content/news-2009-11-23.md
@@ -4,9 +4,9 @@ Authors: Kyle Cranmer
 Category: Blog
 Tags: results
 Slug: News-from-11-23-2009
-Summary:  the ATLAS sees its first collisions ever!  [<a href="https//twiki.cern.ch/twiki/bin/view/Atlas/EventDisplay2009PublicResults">event displays</a>]
+Summary:  the ATLAS sees its first collisions ever!  [<a href="https://twiki.cern.ch/twiki/bin/view/Atlas/EventDisplay2009PublicResults">event displays</a>]
 
 
 
- the ATLAS sees its first collisions ever!  [<a href="https//twiki.cern.ch/twiki/bin/view/Atlas/EventDisplay2009PublicResults">event displays</a>]
+ the ATLAS sees its first collisions ever!  [<a href="https://twiki.cern.ch/twiki/bin/view/Atlas/EventDisplay2009PublicResults">event displays</a>]
 
