--- a/content/news-2009-12-14.md
+++ b/content/news-2009-12-14.md
@@ -4,9 +4,9 @@ Authors: Kyle Cranmer
 Category: Blog
 Tags: results
 Slug: News-from-12-14-2009
-Summary:  the LHC becomes the highest energy collider in history, reaching 2.36 TeV. [<a href="https//twiki.cern.ch/twiki/bin/view/Atlas/EventDisplay2009PublicResults">event displays</a>]
+Summary:  the LHC becomes the highest energy collider in history, reaching 2.36 TeV. [<a href="https://twiki.cern.ch/twiki/bin/view/Atlas/EventDisplay2009PublicResults">event displays</a>]
 
 
 
- the LHC becomes the highest energy collider in history, reaching 2.36 TeV. [<a href="https//twiki.cern.ch/twiki/bin/view/Atlas/EventDisplay2009PublicResults">event displays</a>]
+ the LHC becomes the highest energy collider in history, reaching 2.36 TeV. [<a href="https://twiki.cern.ch/twiki/bin/view/Atlas/EventDisplay2009PublicResults">event displays</a>]
 
