--- a/content/news-2010-03-30.md
+++ b/content/news-2010-03-30.md
@@ -4,11 +4,11 @@ Authors: Kyle Cranmer
 Category: Blog
 Tags: results
 Slug: News-from-03-30-2010
-Summary:  the LHC begins collisions at 7 TeV! [<a href="https//twiki.cern.ch/twiki/bin/view/Atlas/EventDisplayPublicResults">event displays</a>]
+Summary:  the LHC begins collisions at 7 TeV! [<a href="https://twiki.cern.ch/twiki/bin/view/Atlas/EventDisplayPublicResults">event displays</a>]
 
 
 
 
- the LHC begins collisions at 7 TeV! [<a href="https//twiki.cern.ch/twiki/bin/view/Atlas/EventDisplayPublicResults">event displays</a>]
+ the LHC begins collisions at 7 TeV! [<a href="https://twiki.cern.ch/twiki/bin/view/Atlas/EventDisplayPublicResults">event displays</a>]
 
 
