--- a/content/news-2011-11-18.md
+++ b/content/news-2011-11-18.md
@@ -4,10 +4,10 @@ Authors: Kyle Cranmer
 Category: Blog
 Tags: results
 Slug: News-from-11-18-2011
-Summary:  The results of the first ATLAS+CMS Higgs combination are shown at the HCP conference in Paris <a href="https//cdsweb.cern.ch/record/1399599?ln=en">[paper]</a>
+Summary:  The results of the first ATLAS+CMS Higgs combination are shown at the HCP conference in Paris <a href="https://cdsweb.cern.ch/record/1399599?ln=en">[paper]</a>
 
  
 
- The results of the first ATLAS+CMS Higgs combination are shown at the HCP conference in Paris <a href="https//cdsweb.cern.ch/record/1399599?ln=en">[paper]</a>
+ The results of the first ATLAS+CMS Higgs combination are shown at the HCP conference in Paris <a href="https://cdsweb.cern.ch/record/1399599?ln=en">[paper]</a>
 
  
