--- a/content/news-2011-12-05.md
+++ b/content/news-2011-12-05.md
@@ -4,10 +4,10 @@ Authors: Kyle Cranmer
 Category: Blog
 Tags: news
 Slug: News-from-12-05-2011
-Summary:  The beta version of the <a href="http//recast.perimeterinstitute.ca/">RECAST website</a> goes live!
+Summary:  The beta version of the <a href="http://recast.perimeterinstitute.ca/">RECAST website</a> goes live!
 
  
 
- The beta version of the <a href="http//recast.perimeterinstitute.ca/">RECAST website</a> goes live!
+ The beta version of the <a href="http://recast.perimeterinstitute.ca/">RECAST website</a> goes live!
 
  
