--- a/content/news-2013-02-24.md
+++ b/content/news-2013-02-24.md
@@ -4,10 +4,10 @@ Authors: Kyle Cranmer
 Category: Blog
 Tags: outreach
 Slug: News-from-02-24-2013
-Summary:  Kyle Cranmer gives a <a href="http//www.youtube.com/watch?v=Pv_DtHuj5Ds">TEDx talk</a> on the discovery of the Higgs boson.
+Summary:  Kyle Cranmer gives a <a href="http://www.youtube.com/watch?v=Pv_DtHuj5Ds">TEDx talk</a> on the discovery of the Higgs boson.
 
  
 
- Kyle Cranmer gives a <a href="http//www.youtube.com/watch?v=Pv_DtHuj5Ds">TEDx talk</a> on the discovery of the Higgs boson.
+ Kyle Cranmer gives a <a href="http://www.youtube.com/watch?v=Pv_DtHuj5Ds">TEDx talk</a> on the discovery of the Higgs boson.
 
  
