--- a/content/news-2010-08-16.md
+++ b/content/news-2010-08-16.md
@@ -4,10 +4,10 @@ Authors: Kyle Cranmer
 Category: Blog
 Tags: jobs
 Slug: News-from-08-16-2010
-Summary:  Our group invites applications for a tenure-track faculty position in experimental particle physics. [<a href="http//physics.as.nyu.edu/object/physics.facultypositions">job posting</a>]
+Summary:  Our group invites applications for a tenure-track faculty position in experimental particle physics. [<a href="http://physics.as.nyu.edu/object/physics.facultypositions">job posting</a>]
 
  
 
- Our group invites applications for a tenure-track faculty position in experimental particle physics. [<a href="http//physics.as.nyu.edu/object/physics.facultypositions">job posting</a>]
+ Our group invites applications for a tenure-track faculty position in experimental particle physics. [<a href="http://physics.as.nyu.edu/object/physics.facultypositions">job posting</a>]
 
  
