--- a/content/news-2011-07-22.md
+++ b/content/news-2011-07-22.md
@@ -4,10 +4,10 @@ Authors: Kyle Cranmer
 Category: Blog
 Tags: results
 Slug: News-from-07-22-2011
-Summary:  Kyle Cranmer presented the <a href="http//indico.in2p3.fr/contributionDisplay.py?sessionId=6&contribId=299&confId=5116">combined results from ATLAS</a> at the EPS conference, <a href="http//www.nytimes.com/2011/08/02/science/space/02particle.html">sparking excitement</a> over an intriguing excess of events.
+Summary:  Kyle Cranmer presented the <a href="http://indico.in2p3.fr/contributionDisplay.py?sessionId=6&contribId=299&confId=5116">combined results from ATLAS</a> at the EPS conference, <a href="http://www.nytimes.com/2011/08/02/science/space/02particle.html">sparking excitement</a> over an intriguing excess of events.
 
  
 
- Kyle Cranmer presented the <a href="http//indico.in2p3.fr/contributionDisplay.py?sessionId=6&contribId=299&confId=5116">combined results from ATLAS</a> at the EPS conference, <a href="http//www.nytimes.com/2011/08/02/science/space/02particle.html">sparking excitement</a> over an intriguing excess of events.
+ Kyle Cranmer presented the <a href="http://indico.in2p3.fr/contributionDisplay.py?sessionId=6&contribId=299&confId=5116">combined results from ATLAS</a> at the EPS conference, <a href="http://www.nytimes.com/2011/08/02/science/space/02particle.html">sparking excitement</a> over an intriguing excess of events.
 
  
