--- a/content/news-2011-10-21.md
+++ b/content/news-2011-10-21.md
@@ -4,7 +4,7 @@ Authors: Kyle Cranmer
 Category: Blog
 Tags: honors
 Slug: News-from-10-21-2011
-Summary:  Kyle Cranmer joins the <a href="http//inspirehep.net/">INSPIRE</a> advisory board
+Summary:  Kyle Cranmer joins the <a href="http://inspirehep.net/">INSPIRE</a> advisory board
 
 
- Kyle Cranmer joins the <a href="http//inspirehep.net/">INSPIRE</a> advisory board
+ Kyle Cranmer joins the <a href="http://inspirehep.net/">INSPIRE</a> advisory board
