--- a/content/news-2011-11-04.md
+++ b/content/news-2011-11-04.md
@@ -4,10 +4,10 @@ Authors: Kyle Cranmer
 Category: Blog
 Tags: results
 Slug: News-from-11-04-2011
-Summary:  The results of the APEX test run are published in PRL <a href="http//inspirehep.net/record/923960">[paper]</a>
+Summary:  The results of the APEX test run are published in PRL <a href="http://inspirehep.net/record/923960">[paper]</a>
 
  
 
- The results of the APEX test run are published in PRL <a href="http//inspirehep.net/record/923960">[paper]</a>
+ The results of the APEX test run are published in PRL <a href="http://inspirehep.net/record/923960">[paper]</a>
 
  
