--- a/content/news-2012-07-11.md
+++ b/content/news-2012-07-11.md
@@ -4,10 +4,10 @@ Authors: Kyle Cranmer
 Category: Blog
 Tags: outreach
 Slug: News-from-07-11-2012
-Summary:  Professor Kyle Cranmer joins Bill Nye the Science Guy, Eugene Mirman and Sara Vowell on Neil deGrasse Tyson's StarTalk Live for a special episode dedicated to the Higgs discovery.  [<a href="http//www.startalkradio.net/show/startalk-live-the-particle-party-part-1/">Part 1</a>] [<a href="http//www.startalkradio.net/show/startalk-live-the-particle-party-part-2/">Part 2</a>]
+Summary:  Professor Kyle Cranmer joins Bill Nye the Science Guy, Eugene Mirman and Sara Vowell on Neil deGrasse Tyson's StarTalk Live for a special episode dedicated to the Higgs discovery.  [<a href="http://www.startalkradio.net/show/startalk-live-the-particle-party-part-1/">Part 1</a>] [<a href="http://www.startalkradio.net/show/startalk-live-the-particle-party-part-2/">Part 2</a>]
 
  
 
- Professor Kyle Cranmer joins Bill Nye the Science Guy, Eugene Mirman and Sara Vowell on Neil deGrasse Tyson's StarTalk Live for a special episode dedicated to the Higgs discovery.  [<a href="http//www.startalkradio.net/show/startalk-live-the-particle-party-part-1/">Part 1</a>] [<a href="http//www.startalkradio.net/show/startalk-live-the-particle-party-part-2/">Part 2</a>]
+ Professor Kyle Cranmer joins Bill Nye the Science Guy, Eugene Mirman and Sara Vowell on Neil deGrasse Tyson's StarTalk Live for a special episode dedicated to the Higgs discovery.  [<a href="http://www.startalkradio.net/show/startalk-live-the-particle-party-part-1/">Part 1</a>] [<a href="http://www.startalkradio.net/show/startalk-live-the-particle-party-part-2/">Part 2</a>]
 
  
