--- a/content/news-2012-11-19.md
+++ b/content/news-2012-11-19.md
@@ -4,10 +4,10 @@ Authors: Kyle Cranmer
 Category: Blog
 Tags: outreach
 Slug: News-from-11-19-2012
-Summary:  Professor Kyle Cranmer is featured in a <a href="http//www.nsf.gov/news/special_reports/science_nation/higgsboson.jsp">National Science Foundation video</a> about the Higgs boson, as part of their <i>Science Nation</i> online magazine.
+Summary:  Professor Kyle Cranmer is featured in a <a href="http://www.nsf.gov/news/special_reports/science_nation/higgsboson.jsp">National Science Foundation video</a> about the Higgs boson, as part of their <i>Science Nation</i> online magazine.
 
  
 
- Professor Kyle Cranmer is featured in a <a href="http//www.nsf.gov/news/special_reports/science_nation/higgsboson.jsp">National Science Foundation video</a> about the Higgs boson, as part of their <i>Science Nation</i> online magazine.
+ Professor Kyle Cranmer is featured in a <a href="http://www.nsf.gov/news/special_reports/science_nation/higgsboson.jsp">National Science Foundation video</a> about the Higgs boson, as part of their <i>Science Nation</i> online magazine.
 
  
