--- a/content/news-2012-11-19.md
+++ b/content/news-2012-11-19.md
@@ -11,3 +11,4 @@ Summary:  Professor Kyle Cranmer is featured in a <a href="http://www.nsf.gov/ne
  Professor Kyle Cranmer is featured in a <a href="http://www.nsf.gov/news/special_reports/science_nation/higgsboson.jsp">National Science Foundation video</a> about the Higgs boson, as part of their <i>Science Nation</i> online magazine.
 
  
+ <iframe src="//www.youtube.com/embed/d5df1NVkYuQ" allowfullscreen frameborder="0"></iframe>
