--- a/content/news-2015-02-20.md
+++ b/content/news-2015-02-20.md
@@ -1,12 +1,11 @@
-Title: Mincer elected as Chair of Faculty Senate Council
+Title: Mincer elected as Chair of Tenured & Tenure Track Faculty Senate Council
 date: 2015-02-20
 Authors: Kyle Cranmer
 Category: Blog
 Tags: honors
 Slug: News-from-02-20-2015
-Summary: Mincer elected as Chair of Faculty Senate Council
+Summary: Mincer elected as Chair of Tenured &  Tenure Track Faculty Senate Council
 
 
-Allen Mincer has been elected unanimously as  Chair of the NYU  Tenured and 
-Tenure Track Faculty Senate Council --  known as the 
-Faculty Senate Council (FSC).
+Allen Mincer has been elected unanimously as  Chair of the NYU Tenured and 
+Tenure Track Faculty Senate Council.
