Ricardo, DIANA, links

--- a/content/news-2015-02-20.md
+++ b/content/news-2015-02-20.md
@@ -1,11 +1,11 @@
-Title: Mincer elected as Chair of Tenured & Tenure Track Faculty Senate Council
+Title: Mincer elected as Chair of Tenured / Tenure Track Faculty Senate Council
 date: 2015-02-20
 Authors: Kyle Cranmer
 Category: Blog
 Tags: honors
 Slug: News-from-02-20-2015
-Summary: Mincer elected as Chair of Tenured &  Tenure Track Faculty Senate Council
+Summary: Mincer elected as Chair of Tenured /  Tenure Track Faculty Senate Council
 
 
-Allen Mincer has been elected unanimously as  Chair of the NYU Tenured and 
+Allen Mincer has been elected unanimously as  Chair of the NYU Tenured / 
 Tenure Track Faculty Senate Council.
