fix url, add updates, Gilles, Cyril

--- a/content/news-2015-06-17.md
+++ b/content/news-2015-06-17.md
@@ -4,7 +4,7 @@ Authors: Kyle Cranmer
 Category: Blog
 Tags: honors
 Slug: News-from-6-17-2015
-Summary: DIANA/HEP project funded
+Summary: 2015 ATLAS Outstanding Achievement Award
 
 We are happy to announce that Catrin Bernius was honored with the 2015 ATLAS Outstanding Achievement Award
 "For the enthusiastic and vigorous dedication to the implementation and commissioning of the complex ATLAS Run-2 trigger menu". Congratulations to Catrin!
