fall 2016 website updates

--- a/content/news-2016-04-08.md
+++ b/content/news-2016-04-08.md
@@ -2,26 +2,13 @@ Title: NYU to host ATLAS Week 2016
 date: 2016-04-08 
 Authors: Kyle Cranmer
 Category: Blog
-Tags: honors
+Tags: honors, Atlas
 Slug: ATLAS-week-2016
 Summary: NYU to host ATLAS Week 2016
 
 
-NYU will be hosting ATLAS Week June 26-July 1, 2016. 
+NYU will be hosting ATLAS Week June 26-July 1, 2016. [Register Now](https://indico.cern.ch/e/www.atlasweek2016.com)
 
-Local Organising Committee :
-
-  * Chris Bee (Stonybrook Univ.) 
-  * Gustaf Brooijmans (Columbia Univ.) 
-  * Kyle Cranmer (NYU)
-  * Andy Haas (NYU)
-  * John Hobbs (Stonybrook Univ.) Allen Mincer(NYU)
-  * Peter Nemethy(NYU)
-  * Connie Potter (CERN)
-  * Petya Lilova (CERN)
-  * Winnie Yu (US ATLAS)
-
-See [Register](https://indico.cern.ch/e/www.atlasweek2016.com)
 
 ![](./images/ATLAS_OWeek_final_print.png)
 
