--- a/content/news-2016-04-08.md
+++ b/content/news-2016-04-08.md
@@ -13,7 +13,7 @@ NYU will be hosting ATLAS Week June 26-July 1, 2016. [Register Now](https://indi
 ![](./images/ATLAS_OWeek_final_print.png)
 
 <a href="images/atlas-week-group-IMG_7192.JPG">
-<img src="images/atlas-week-group-IMG_7192-smaller.jpeg" widht="100%" alt="The new physics department in 726 Broadway" />
+<img src="images/atlas-week-group-IMG_7192-smaller.jpg" widht="100%" alt="The new physics department in 726 Broadway" />
 </a>
 
 
