--- a/content/news-2018-09-01.md
+++ b/content/news-2018-09-01.md
@@ -2,9 +2,9 @@ Title: IRIS-HEP funded
 date: 2018-09-01
 Authors: Kyle Cranmer
 Category: Blog
-Tags: funding
+Tags: funding, honors
 Slug: iris-hep
-Summary: IRIS-HEP Funded
+Summary: IRIS-HEP Funded, Cranmer leads Analysis Systems group
  
 In a follow up to [DIANA/HEP](http://diana-hep.org), the [NSF has funded](https://www.nsf.gov/news/news_summ.jsp?cntn_id=296456&org=NSF&from=news) the Institute for Research and [Innovation in Software in High Energy Physics (IRIS-HEP)](http://iris-hep.org). IRIS-HEP is a software institute that aims to develop the state-of-the-art software cyberinfrastructure required for the challenges of data intensive scientific research at the High Luminosity Large Hadron Collider (HL-LHC) at CERN, and other planned HEP experiments of the 2020’s. These facilities are discovery machines which aim to understand the fundamental building blocks of nature and their interactions. 
 
