--- a/content/news-2020-01-15.md
+++ b/content/news-2020-01-15.md
@@ -6,10 +6,36 @@ Tags: events
 Slug: ml4jets-2020
 Summary: NYU Hosts ML4Jets 2020
  
-NYU Hosted the third in a series of workshops focusing on Machine Learning for Jet Physics. We had around 115 participants for the three day workshop, which was a great success. 
+NYU Hosted the third in a series of workshops focusing on Machine Learning for Jet Physics from January 15-17, 2020. The [event](https://indico.cern.ch/event/809820/overview) drew more than 100 participants including experimental physicists, theoretical physicists, computer scientists, and applied mathematicians. IRIS-HEP members Kyle Cranmer and Sebastian Macaluso were the local organizers.
 
- * [Agenda](https://indico.cern.ch/event/809820/overview)
+Jets are sprays of particles that result from the production of quarks and gluons, and they are copiously produced at the LHC. Essentially every collision at the LHC has one or more jets. Many searches for new physics must either fight against a huge background caused by jets or try to uncover the subtle signs for new physics hiding inside the jets. Because jets are composed of many particles, they are complicated objects to analyze. 
+
+Machine learning techniques offer [great promise for jet physics](https://iris-hep.org/projects/ml4jets.html), which has become one of the most active areas for deep learning research at the LHC. Initial work in deep learning for jet physics was based on an analogy with images. Later, techniques built on an analogy with natural language. Shortly after that graph neural networks were brought to bear on these challenging problems. The particular considerations of jet physics have motivated a variety of new architectures, and these challenges have inspired a number of collaborations with machine learning researchers. Several of these approaches were compared in the paper [The Machine Learning Landscape of Top Taggers](http://inspirehep.net/record/1722059), which considered a specific benchmark dataset. On Friday, Heiko Mueller and Sebastian Macaluso (of the NSF-funded projects IRIS-HEP, DIANA-HEP, and SCAILFIN) presented a tool called ROB (Reproducible Open Benchmarks) aimed at streamlining and automating these types of benchmarking efforts.
+
+The first day included introductory talks by Maxim Perelstein from a theoretical physicist's perspective, Alison Lister from an experimental perspective, and [Gilles Louppe](https://glouppe.github.io), a computer scientist that has collaborated with LHC physicists. 
+
+"This year we have really seen an growth in the scope of topics being discussed at ML4Jets," explained Kyle Cranmer. Generative models such as GANs were a hot topic. In addition, we heard from both physicists and mathematicians about Optimal Transport, which provides a natural way of comaring how similar two jets are. Connections were made to topic modelling, hierarchical clustering, variational inference, likelihood-free inference, domain adaptation, unfolding, and robustness. In addition, an entire session was devoted to a challenge dubbed the LHC Olympics, which focused on anomaly detection. A number of techniques have beeen developed recently to try to uncover new physics from the data. This is a fresh approach to the LHC data analysis that complements the highly optimized searches for specific theories. 
+
+The material from the workshop is available online in an [Indico agenda](https://indico.cern.ch/event/809820/overview)
 
 <img src="./images/ml4jets-2020.jpeg" width="80%" alt="Poster"/>
+
+<!--
+ML4Jets-group-photo.jpeg
+Caption: Group photo for ML4Jets
+
+room.HEIC
+Caption: More than 100 physicists gathered for the three day workshop.
+
+louppe-1.heic
+Caption: [Gilles Louppe](https://glouppe.github.io), Associate Professor of artificial intellegence at the University of Liège (Belgium) describes modern deep learning by analogy with lego building blocks.
+
+Cho.HEIC
+Caption: [Kyunghyun Cho](http://www.kyunghyuncho.me) Associate Professor of Computer Science and Data Science at NYU describes recent progress in machine translation and it's potential for physics applications.
+
+Weed.HEIC
+Caption: [Jonathan Niles-Weed](https://www.jonathannilesweed.com),  Assistant Professor of Mathematics and Data Science at NYU describes how Optimal Transport can be used to better understand structured data.
+
+-->
 
 <blockquote class="twitter-tweet"><p lang="en" dir="ltr">The next Machine Learning for Jets <a href="https://twitter.com/hashtag/ML4Jets?src=hash&amp;ref_src=twsrc%5Etfw">#ML4Jets</a> workshop will be held at <a href="https://twitter.com/nyuniversity?ref_src=twsrc%5Etfw">@nyuniversity</a> Jan 15-17<a href="https://t.co/jU8kIB6ArJ">https://t.co/jU8kIB6ArJ</a> <a href="https://t.co/fonraEHdhC">pic.twitter.com/fonraEHdhC</a></p>&mdash; IRIS-HEP (@iris_hep) <a href="https://twitter.com/iris_hep/status/1172928652599803904?ref_src=twsrc%5Etfw">September 14, 2019</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
